@@ -6,6 +6,7 @@
 .idea/
 *.iml
 broker/target/
+metrics_prometheus/target/
 client/target/
 parser_commons/target/
 netty_parser/target/
