@@ -1,5 +1,6 @@
 package io.moquette.broker;
 
+import io.moquette.logging.MetricsManager;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -12,16 +13,18 @@ final class SessionEventLoop extends Thread {
 
     private final BlockingQueue<FutureTask<String>> taskQueue;
     private final boolean flushOnExit;
+    private final int queueId;
 
-    public SessionEventLoop(BlockingQueue<FutureTask<String>> taskQueue) {
-        this(taskQueue, true);
+    public SessionEventLoop(BlockingQueue<FutureTask<String>> taskQueue, int queueId) {
+        this(taskQueue, queueId, true);
     }
 
     /**
      * @param flushOnExit consume the commands queue before exit.
      * */
-    public SessionEventLoop(BlockingQueue<FutureTask<String>> taskQueue, boolean flushOnExit) {
+    public SessionEventLoop(BlockingQueue<FutureTask<String>> taskQueue, int queueId, boolean flushOnExit) {
         this.taskQueue = taskQueue;
+        this.queueId = queueId;
         this.flushOnExit = flushOnExit;
     }
 
@@ -30,7 +33,8 @@ final class SessionEventLoop extends Thread {
         while (!Thread.interrupted() || (Thread.interrupted() && !taskQueue.isEmpty() && flushOnExit)) {
             try {
                 // blocking call
-                final FutureTask<String> task = this.taskQueue.take();
+                final FutureTask<String> task = taskQueue.take();
+                MetricsManager.getMetricsProvider().setSessionQueueFill(queueId, taskQueue.size());
                 executeTask(task);
             } catch (InterruptedException e) {
                 LOG.info("SessionEventLoop {} interrupted", Thread.currentThread().getName());
