@@ -68,6 +68,7 @@
         <module>broker</module>
         <!-- module>distribution</module -->
         <!-- module>embedding_moquette</module -->
+        <module>metrics_prometheus</module>
     </modules>
 
     <dependencies>
